--- a/kehop.html
+++ b/kehop.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="hu">
-    <head>padding-nav-nagy
+    <head>
         <meta charset="UTF-8">
         <meta name="keywords" content="Terrorelhárítási Központ, Swat, Terror, Police">
-        <title>Terrorelhárítási Központ - Humánigazgatás</title>
+        <title>Terrorelhárítási Központ - Gazdálkodás - Kehop</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="TEK.css">
@@ -69,32 +69,18 @@
         <div class="bg-image padding-nav-nagy">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12">
-                    <h3><b>Humánigazgatás</b></h3>
+                    <h3 class="kisseb"><b>A Terrorelhárítási Központnál megvalósuló Környezet és Energia&#40;hatékonysági&#41; Operatív Programok                    </b></h3>
                     <hr>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 main-text">
-                    <p>
-                        A terrorizmust elhárító szerv személyi állománya hivatásos állományú rendőrökből, vezényelt hivatásos állományúakból, valamint rendvédelmi igazgatási alkalmazottakból és munkavállalókból állhat.<br><br>
-                        Hivatásos állományúak esetében a beosztás betöltésének feltétele a szakterületen eltöltött minimum 5 éves gyakorlat, nemzetbiztonsági ellenőrzés, valamint a beosztáshoz szükséges egészségi, pszichológiai és a fizikai alkalmasság, a személyvédelmi és műveleti szakterületen további alkalmassági felvételi eljárás.<br><br>
-                        Bérezés&#58; a rendvédelmi feladatokat ellátó szervek hivatásos állományának szolgálati jogviszonyáról szóló 2015. évi XLII. törvény (Hszt.), valamint a belügyminiszter irányítása alá tartozó rendvédelmi feladatokat ellátó szervek hivatásos szolgálati viszonyban álló tagjai illetményének és egyéb juttatásainak megállapításáról, valamint a folyósítás szabályairól szóló 33/2015. (VI. 16.) BM rendelet, valamint a belügyminiszter irányítása alatt álló rendvédelmi feladatokat ellátó szerveknél a hivatásos szolgálati beosztásokról és a betöltésükhöz szükséges követelményekről szóló 30/2015. (VI. 16.) BM rendelet rendelkezései szerint.<br><br>
-                        Rendvédelmi igazgatási alkalmazott felvételi követelményei&#58;
-                        <ul>
-                            <li>Legalább érettségi végzettség</li>
-                            <li>Egészségi szempontból alkalmas</li>
-                            <li>Nemzetbiztonsági ellenőrzés</li>
-                            <li>Rendészeti alapvizsga</li>
-                        </ul><br>
-                        Bérezés&#58; Hszt. 12. melléklete szerint<br><br>
-                        Munkavállaló felvételi követelményei&#58;
-                        <ul>
-                            <li>A munka törvénykönyvéről szóló 2012. évi I. törvény szerint</li>
-                            <li>Nemzetbiztonsági ellenőrzés</li>
-                            <li>Munkakör betöltéséhez szükséges képesítés</li>
-                        </ul><br>
-                        Bővebb információ a HR Igazgatóságtól kérhető.
-                    </p>
+                    <br><br>
+                    <ul>
+                        <li><a href="http://tek.gov.hu/keop/index.html">KEOP-5.6.012 &#45; 2014-0020 "Központi költségvetési szervek energiahatékonysági beruházásai" -  A Terrorelhárítási Központ 1101 Budapest, Zách u. 4. alatti objektumának területén található 5., 7., 8., 11., 16., 19. számú épületek energetikai korszerűsítése</a></li><br>
+                        <li><a href="kehop524.html">KEHOP-5.2.4-15-2016-00001 "Központi költségvetési szervek energiahatékonysági beruházásai – szakaszolt projektek" - A Terrorelhárítási Központ 1101 Budapest, Zách u. 4. alatti objektumában található épületek energetikai korszerűsítése</a></li>
+                    </ul>
+                    <br><br><br>
                     <hr>
                 </div>
             </div>
