--- a/kehop524.html
+++ b/kehop524.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="hu">
-    <head>padding-nav-nagy
+    <head>
         <meta charset="UTF-8">
         <meta name="keywords" content="Terrorelhárítási Központ, Swat, Terror, Police">
-        <title>Terrorelhárítási Központ - Humánigazgatás</title>
+        <title>Terrorelhárítási Központ - Gazdálkodás - Kehop524</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="TEK.css">
@@ -66,34 +66,36 @@
                 </div>
             </div>
         </nav>
-        <div class="bg-image padding-nav-nagy">
+        <div class="padding-nav-kisci">
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12">
-                    <h3><b>Humánigazgatás</b></h3>
-                    <hr>
+                <div class="col-xs-8 col-sm-8 col-md-8">
+                    <br><br>
+                    <h4><b>Kedvezményezett neve: Terrorelhárítási Központ</b></h4>
+                    <br><br>
+                    <p class="kehop524-text">
+                        A Terrorelhárítási Központ<br>
+                        1101 Budapest, Zách u. 4. alatti objektumában található épületek energetikai korszerűsítése<br><br>
+                    </p>
+                    <h4><b>Projekt azonosító száma&#58; KEHOP-5.2.4-15-2016-00001</b></h4>
+                </div>
+                <div class="col-xs-4 col-sm-4 col-md-4">
+                    <img src="infoblokk.jpg" alt="infoblokk" class="infoblokk-img">
                 </div>
             </div>
+            <hr>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 main-text">
+                    <h3><b>A projekt tartalma</b></h3><br>
                     <p>
-                        A terrorizmust elhárító szerv személyi állománya hivatásos állományú rendőrökből, vezényelt hivatásos állományúakból, valamint rendvédelmi igazgatási alkalmazottakból és munkavállalókból állhat.<br><br>
-                        Hivatásos állományúak esetében a beosztás betöltésének feltétele a szakterületen eltöltött minimum 5 éves gyakorlat, nemzetbiztonsági ellenőrzés, valamint a beosztáshoz szükséges egészségi, pszichológiai és a fizikai alkalmasság, a személyvédelmi és műveleti szakterületen további alkalmassági felvételi eljárás.<br><br>
-                        Bérezés&#58; a rendvédelmi feladatokat ellátó szervek hivatásos állományának szolgálati jogviszonyáról szóló 2015. évi XLII. törvény (Hszt.), valamint a belügyminiszter irányítása alá tartozó rendvédelmi feladatokat ellátó szervek hivatásos szolgálati viszonyban álló tagjai illetményének és egyéb juttatásainak megállapításáról, valamint a folyósítás szabályairól szóló 33/2015. (VI. 16.) BM rendelet, valamint a belügyminiszter irányítása alatt álló rendvédelmi feladatokat ellátó szerveknél a hivatásos szolgálati beosztásokról és a betöltésükhöz szükséges követelményekről szóló 30/2015. (VI. 16.) BM rendelet rendelkezései szerint.<br><br>
-                        Rendvédelmi igazgatási alkalmazott felvételi követelményei&#58;
-                        <ul>
-                            <li>Legalább érettségi végzettség</li>
-                            <li>Egészségi szempontból alkalmas</li>
-                            <li>Nemzetbiztonsági ellenőrzés</li>
-                            <li>Rendészeti alapvizsga</li>
-                        </ul><br>
-                        Bérezés&#58; Hszt. 12. melléklete szerint<br><br>
-                        Munkavállaló felvételi követelményei&#58;
-                        <ul>
-                            <li>A munka törvénykönyvéről szóló 2012. évi I. törvény szerint</li>
-                            <li>Nemzetbiztonsági ellenőrzés</li>
-                            <li>Munkakör betöltéséhez szükséges képesítés</li>
-                        </ul><br>
-                        Bővebb információ a HR Igazgatóságtól kérhető.
+                        A Terrorelhárítási Központ &#40;továbbiakban&#58; TEK&#41; 2010-ben vette birtokba a fővárosban a 12 hektárnyi Zách utcai területet, az összesen 34 épületből álló létesítményt. Az épületek építési ideje és építési technológiája nagyon vegyes, 1906-ban épített tégla- és 1975-ös panel szerkezetű épület egyaránt található a területen. Az épületek állaga meglehetősen leromlott, jelentős részükben nincs szigetelés, elavultak a nyílászárók, korszerűtlen a világítási rendszer. A fűtési rendszerben nagy a veszteség, sok a meghibásodás és magas a karbantartási költség.<br><br>
+                        A jelenlegi beruházás során 19 épületet érintően gépészeti felújításokat tervezünk megvalósítani, ebből 13 épület homlokzati hőszigetelést is kap, továbbá a külső nyílászárók cseréje is megtörténik.<br><br>
+                        A projekt célja, hogy hatékonyabb legyen az objektum energiafelhasználása, magasabb komfortérzet mellett jelentősen csökkenjen a fogyasztott energia mennyisége és ezzel együtt a károsanyag kibocsátás is. A korszerűsítés eredményeként az épületek fenntartási költségei is lényegesen alacsonyabbak lesznek.<br><br>
+                        A TEK gyakorlatilag a munkatársak második otthona. A fejlesztés jobb munkakörülményeket teremt, ami nemcsak a munka eredményességét szolgálja, de a tevékeny mindennapok komfortérzetét is javítja.<br><br><br><br>
+                        <b>
+                            A szerződött támogatás összege&#58; 1 334 433 856 Ft<br><br>
+                            A támogatás mértéke&#58; 100&#37;<br><br>
+                            projekt tervezett befejezési dátuma&#58; 2020. január 31.<br><br>
+                        </b>
                     </p>
                     <hr>
                 </div>
