--- a/Gazdálkodás.html
+++ b/Gazdálkodás.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="TEK.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" defer></script>
-        <script src="Gazdálkodás.js" defer></script>
+        <script src="index.js" defer></script>
     </head>
     <body>
         <nav class="navbar-fixed-top">
