--- a/cbrn.html
+++ b/cbrn.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="keywords" content="Terrorelhárítási Központ, Swat, Terror, Police">
-        <title>Terrorelhárítási Központ - Gazdálkodás - bba</title>
+        <title>Terrorelhárítási Központ - Gazdálkodás - bba - cbrn</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="TEK.css">
@@ -69,7 +69,7 @@
         <div class="bg-image padding-nav-nagy">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12">
-                    <h3><b>A Terrorelhárítási Központ Belső Biztonsági Alap Pályázatai</b></h3>
+                    <h3><b>CBRN védőfelszerelések és eszközök beszerzése</b></h3>
                     <hr>
                 </div>
             </div>
@@ -77,7 +77,8 @@
                 <div class="col-xs-12 col-sm-12 col-md-12 main-text">
                     <br><br>
                     <ul>
-                        <li><a href="cbrn.html">BBA 6.1.2.-2015-00001 számú, „A TEK CBRN&#40;E&#41; képességeinek megteremtése, valamint bevetésirányító központ kialakítása” című projekt „CBRN védőfelszerelések és eszközök beszerzése II” tárgyú 2016. évi XXX. törvény 4. &sect; &#40;1&#41; bekezdés b&#41; pontja szerinti biztonsági beszerzési eljárás</a></li>
+                        <li><a href="http://tek.gov.hu/bba/reszveteli_felhivas_CBRN_vedofelszerelesek_es_eszkozok_besz_II..pdf">Részvételi felhívás 2018.07.13.</a></li><br>
+                        <li><a href="https://view.officeapps.live.com/op/view.aspx?src=http%3A%2F%2Ftek.gov.hu%2Fbba%2Fmellekletek_reszveteli_felhivashoz_CBRN_II.docx&wdOrigin=BROWSELINK">1-12.sz. mellékletek</a></li>
                     </ul>
                     <br><br><br><br><br><br><br>
                     <hr>
