--- a/eu.html
+++ b/eu.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="keywords" content="Terrorelhárítási Központ, Swat, Terror, Police">
-        <title>Terrorelhárítási Központ - Gazdálkodás - ecprojekt</title>
+        <title>Terrorelhárítási Központ - Gazdálkodás - ecprojekt - eu</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="TEK.css">
@@ -68,56 +68,15 @@
         </nav>
         <div class="bg-image padding-nav-nagy">
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12">
-                    <h3><b>A Terrorelhárítási Központ Európai Bizottság pályázatai &#40;European Commission projects&#41;</b></h3>
-                    <hr>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 main-text">
-                    <br><br><br>
-                    <ul>
-                        <li><a href="eu.html">ISEC HOME/2011/ISEC/AG/INT/42218 ”Terrorizmushoz és Számítógépes bűnözéshez kapcsolódó Internet Figyelő Egység és Nemzeti Kapcsolattartó pont felállítása”</a></li>
-                    </ul>
-                    <br><br><br><br><br><br><br>
-                    <hr>
+                    <p>
+                        Az EU pénzügyi támogatásával létrejött - HOME/2011/ISEC/AG/INT/42218. számú – projekt segítségével a Terrorelhárítási Központ külön szervezeti egységeként, 2012-ben megalakult az E-Osztály.<br><br>
+                        A célkitűzés egy Terrorizmussal és Kiberbűnözéssel kapcsolatos internet monitoring egység és Nemzetközi Kapcsolattartási Pont működtetése, mely képes a modern, dinamikusan változó társadalom kihívásainak megfelelni, szükség esetén képes reagálni, hatékony információgyűjtő munkával támogatni a TEK szakegységeit, tágabb értelemben pedig a magyar rendvédelmi szervek munkáját segíteni.<br><br>
+                    </p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 text-center">
-                    <table class="img-table">
-                        <tr>
-                            <td>
-                                <a href="http://www.kormany.hu/hu/belugyminiszterium" target="_blank">
-                                    <img src="bm_bw.jpg" data-hover="bm.jpg" alt="BM">
-                                </a>
-                            </td>
-                            <td>
-                                <a href="http://www.nvsz.hu" target="_blank">
-                                    <img src="nvsz_bw.jpg" data-hover="nvsz.jpg" alt="NVSZ">
-                                </a>
-                            </td>
-                            <td>
-                                <a href="http://www.police.hu" target="_blank">
-                                    <img src="police_0_bw.jpg" data-hover="police_0.jpg" alt="Police">
-                                </a>
-                            </td>
-                            <td>
-                                <a href="https://belugyiszemle.hu/" target="_blank">
-                                    <img src="BelugyiSzemleLogoBW.jpg" data-hover="BelugyiSzemleLogoBlue.jpg" alt="Belugyi Szemle">
-                                </a>
-                            </td>
-                        </tr>
-                    </table>
-                    <hr>
+                    
                 </div>
             </div>
-            <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12">
-                    <p class="text-center">&copy; 2010-<span id="year"></span> TEK</p>
-                    <hr>
-                </div>
-            </div>
-        </div>
-    </body>
-</html>
