finished off some pages

--- a/eu.html
+++ b/eu.html
@@ -70,13 +70,61 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 main-text">
                     <p>
-                        Az EU pénzügyi támogatásával létrejött - HOME/2011/ISEC/AG/INT/42218. számú – projekt segítségével a Terrorelhárítási Központ külön szervezeti egységeként, 2012-ben megalakult az E-Osztály.<br><br>
+                        Az EU pénzügyi támogatásával létrejött &#45; HOME/2011/ISEC/AG/INT/42218. számú &#45; projekt segítségével a Terrorelhárítási Központ külön szervezeti egységeként, 2012-ben megalakult az E-Osztály.<br><br>
                         A célkitűzés egy Terrorizmussal és Kiberbűnözéssel kapcsolatos internet monitoring egység és Nemzetközi Kapcsolattartási Pont működtetése, mely képes a modern, dinamikusan változó társadalom kihívásainak megfelelni, szükség esetén képes reagálni, hatékony információgyűjtő munkával támogatni a TEK szakegységeit, tágabb értelemben pedig a magyar rendvédelmi szervek munkáját segíteni.<br><br>
                     </p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12 text-center">
-                    
+                <div class="col-xs-12 col-sm-12 col-md-12 text-center main-text">
+                    <img src="euflag.jpg" alt="euflag" class="kisci-img">
+                    <br><br>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 text-center main-text">
+                    <p>
+                        „Az Európai Bizottság &#45; Belügyi Főigazgatóság”<br>
+                        Bűnmegelőzés és a bűnözés elleni küzdelem program pénzügyi támogatásával
+                    </p>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 text-center">
+                    <table class="img-table">
+                        <tr>
+                            <td>
+                                <a href="http://www.kormany.hu/hu/belugyminiszterium" target="_blank">
+                                    <img src="bm_bw.jpg" data-hover="bm.jpg" alt="BM">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="http://www.nvsz.hu" target="_blank">
+                                    <img src="nvsz_bw.jpg" data-hover="nvsz.jpg" alt="NVSZ">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="http://www.police.hu" target="_blank">
+                                    <img src="police_0_bw.jpg" data-hover="police_0.jpg" alt="Police">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="https://belugyiszemle.hu/" target="_blank">
+                                    <img src="BelugyiSzemleLogoBW.jpg" data-hover="BelugyiSzemleLogoBlue.jpg" alt="Belugyi Szemle">
+                                </a>
+                            </td>
+                        </tr>
+                    </table>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12">
+                    <p class="text-center">&copy; 2010-<span id="year"></span> TEK</p>
+                    <hr>
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
