--- a/Aktulis.html
+++ b/Aktulis.html
@@ -77,5 +77,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-12 main-text">
                     <p>
                         <b>Végső búcsú</b><br>
-                        
+                        <a href="doc/vegso_bucsu.pdf">Végső búcsú</a>
+                        <a href="index.html">Videó</a>
+                        <a href="http://tek.gov.hu/pictures/vegso_bucsu.zip">Képek</a>
                     </p>
