--- a/Aktulis.html
+++ b/Aktulis.html
@@ -77,7 +77,12 @@
                 <div class="col-xs-12 col-sm-12 col-md-12 main-text">
                     <p>
                         <b>Végső búcsú</b><br>
-                        <a href="doc/vegso_bucsu.pdf">Végső búcsú</a>
+                        <a href="http://tek.gov.hu/doc/vegso_bucsu.pdf">Végső búcsú</a>
                         <a href="index.html">Videó</a>
-                        <a href="http://tek.gov.hu/pictures/vegso_bucsu.zip">Képek</a>
+                        <a href="http://tek.gov.hu/pictures/vegso_bucsu.zip">Képek</a><br>
+                        <hr>
+                        <b>Kis-Dunában elmerült bv-sek utáni kutatás</b><br>
+                        <a href="http://tek.gov.hu/doc/vegso_bucsu.pdf">Közlemény</a>
+                        <a href="index.html">Videó</a>
+                        <a href="http://tek.gov.hu/pictures/vegso_bucsu.zip">Képek</a><br>
                     </p>
