--- a/Aktulis.html
+++ b/Aktulis.html
@@ -80,9 +80,10 @@
                         <a href="http://tek.gov.hu/doc/vegso_bucsu.pdf">Végső búcsú</a>
                         <a href="index.html">Videó</a>
                         <a href="http://tek.gov.hu/pictures/vegso_bucsu.zip">Képek</a><br>
-                        <hr>
-                        <b>Kis-Dunában elmerült bv-sek utáni kutatás</b><br>
-                        <a href="http://tek.gov.hu/doc/vegso_bucsu.pdf">Közlemény</a>
+                        <hr><br><br>
+                        <b>Kis-Dunában elmerült bv-sek utáni kutatás<br>
+                        <a href="http://tek.gov.hu/doc/racalmas_kozlemeny.pdf">Közlemény</a>
                         <a href="index.html">Videó</a>
-                        <a href="http://tek.gov.hu/pictures/vegso_bucsu.zip">Képek</a><br>
+                        <a href="http://tek.gov.hu/pictures/racalmas/racalmas.zip">Képek</a></b><br>
+                        <hr><br><br>
                     </p>
