--- a/karbantartás.html
+++ b/karbantartás.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="keywords" content="Terrorelhárítási Központ, Swat, Terror, Police">
-        <title>Terrorelhárítási Központ - E-Ügyintézés</title>
+        <title>Terrorelhárítási Központ - E-Ügyintézés - karbantartás</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="TEK.css">
@@ -71,7 +71,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-12 info-2">
                     <br><br>
                     <ul>
-                        <li><a href="karbantartás.html">Karbantartás</a></li>
+                        <li><a href="karbantartas.html">Karbantartás</a></li>
                         <li><a href="szabalyzatok.html">Szabályzatok</a></li>
                         <li><a href="tajekoztatok.html">Tájékoztatók</a></li>
                         <li><a href="epapirlogo.html">E-Papír logo</a></li>
@@ -82,18 +82,16 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 main-text-info">
-                    <h3><b>Szabályzatok</b></h3><br>
-                    <ul>
-                        <li><a href="http://tek.gov.hu/pdf/szabalyzat_e_alairas_belyegzo.pdf">- Elektronikus Aláírási És Elektronikus Bélyegzési Szabályzata 1.0</a></li>
-                        <li><a href="http://tek.gov.hu/pdf/Elektronikus_alairasi_es_elektronikus_belyegzesi_szabalyzat_2.pdf">- Elektronikus Aláírási És Elektronikus Bélyegzési Szabályzata 1.1</a></li>
-                        <li><a href="http://tek.gov.hu/pdf/alairasi_szabalyzat_20.pdf">- Elektronikus Aláírási És Elektronikus Bélyegzési Szabályzata 2.0</a></li>
-                        <li><a href="http://tek.gov.hu/pdf/TEK_elektronikus_alairasi_es_elektronikus_belyegzesi_szabalyzata30.pdf">- Elektronikus Aláírási És Elektronikus Bélyegzési Szabályzata 3.0</a></li>
-                        <li><a href="http://tek.gov.hu/pdf/szabalyzat_info.pdf">- Információátadási Szabályzata</a></li>
-                        <li><a href="http://tek.gov.hu/pdf/szabalyzat_masolatkeszítesi.pdf">- Másolatkészítési Szabályzata</a></li>
-                        <li><a href="http://tek.gov.hu/pdf/masolatkeszitesi2.pdf">- Másolatkészítési Szabályzata 2</a></li>
-                        <li><a href="http://tek.gov.hu/pdf/masolatkeszitesi3.pdf">- Másolatkészítési Szabályzata 3</a></li>
-                    </ul><br>
-                    <hr>
+                    <h3><b>Karbantartás</b></h3><br>
+                    <p>
+                        <b>
+                            Tájékoztatás a Terrorelhárítási Központ elektronikus ügyintézésében tervezett üzemszünetről<br>
+                            Leállás kezdete: 2019. 09. 26. - 16:00<br>
+                            Leállás vége: 2019. 06. 27. - 16:00<br>
+                            Érintett szolgáltatások: e-Papír űrlapok befogadása, ÁNYK űrlapok befogadása, e-Papír küldemények (KRX) befogadása, hivatali tárhelyre küldemények fogadása, küldése
+                        </b><br><br>
+                        A Terrorelhárítási Központ által működtetett elektronikus információs rendszert érintően 2019. 09. 26. (csütörtök) 16:00 óra és 2019. 09. 27. (péntek) 16:00 óra között karbantartást végeznek, amely idő alatt a Terrorelhárítási Központ elektronikus ügyintézése korlátozottan lesz elérhető. Az ügyfelek részére változatlanul elérhető lesz a Terrorelhárítási Központ hivatalos internetes honlapja, így a központi és a Terrorelhárítási Központ által biztosított ügyintézési szolgáltatások igénybevételével biztosított elektronikus ügyindítási lehetőségek. Az elektronikus küldemények Terrorelhárítási Központ oldali feldolgozása az érintett időszakot követően kezdődik meg.
+                    </p>
                 </div>
             </div>
             <div class="row">
