--- a/Szabályzatok.html
+++ b/Szabályzatok.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="keywords" content="Terrorelhárítási Központ, Swat, Terror, Police">
-        <title>Terrorelhárítási Központ - E-Ügyintézés</title>
+        <title>Terrorelhárítási Központ - E-Ügyintézés - Szabályzatok</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="TEK.css">
@@ -84,13 +84,11 @@
                 <div class="col-xs-12 col-sm-12 col-md-12 main-text-info">
                     <h3><b>Szabályzatok</b></h3><br>
                     <ul>
-                        <li><a href="http://tek.gov.hu/pdf/szabalyzat_e_alairas_belyegzo.pdf">- Elektronikus Aláírási És Elektronikus Bélyegzési Szabályzata 1.0</a></li>
-                        <li><a href="http://tek.gov.hu/pdf/Elektronikus_alairasi_es_elektronikus_belyegzesi_szabalyzat_2.pdf">- Elektronikus Aláírási És Elektronikus Bélyegzési Szabályzata 1.1</a></li>
-                        <li><a href="http://tek.gov.hu/pdf/alairasi_szabalyzat_20.pdf">- Elektronikus Aláírási És Elektronikus Bélyegzési Szabályzata 2.0</a></li>
-                        <li><a href="http://tek.gov.hu/pdf/TEK_elektronikus_alairasi_es_elektronikus_belyegzesi_szabalyzata30.pdf">- Elektronikus Aláírási És Elektronikus Bélyegzési Szabályzata 3.0</a></li>
+                        <li><a href="http://tek.gov.hu/pdf/szabalyzat_e_alairas_belyegzo.pdf">- Elektronikus Aláírási És Elektronikus Bélyegzési Szabályzata</a></li>
+                        <li><a href="http://tek.gov.hu/pdf/Elektronikus_alairasi_es_elektronikus_belyegzesi_szabalyzat_2.pdf">- Elektronikus Aláírási És Elektronikus Bélyegzési Szabályzata2</a></li>
                         <li><a href="http://tek.gov.hu/pdf/szabalyzat_info.pdf">- Információátadási Szabályzata</a></li>
                         <li><a href="http://tek.gov.hu/pdf/szabalyzat_masolatkeszítesi.pdf">- Másolatkészítési Szabályzata</a></li>
-                        <li><a href="http://tek.gov.hu/pdf/masolatkeszitesi2.pdf">- Másolatkészítési Szabályzata 2</a></li>
+                        <li><a href="http://tek.gov.hu/pdf/masolatkeszitesi_szabalyzat_modositott.pdf">- Másolatkészítési szabályzat_módosított</a></li>
                         <li><a href="http://tek.gov.hu/pdf/masolatkeszitesi3.pdf">- Másolatkészítési Szabályzata 3</a></li>
                     </ul><br>
                     <hr>
