--- a/E-Ügyintézés.html
+++ b/E-Ügyintézés.html
@@ -74,7 +74,7 @@
                         <li><a href="karbantartás.html">Karbantartás</a></li>
                         <li><a href="szabályzatok.html">Szabályzatok</a></li>
                         <li><a href="tájékoztatók.html">Tájékoztatók</a></li>
-                        <li><a href="epapirlogo.html">E-Papír logo</a></li>
+                        <li><a href="epapírlogo.html">E-Papír logo</a></li>
                         <li><a href="rendőriintezkedésellenipanasz.html">Rendőri intézkedés elleni panasz (ÁNYK)</a></li>
                     </ul><br>
                     <hr>
