--- a/tájékoztatók.html
+++ b/tájékoztatók.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="keywords" content="Terrorelhárítási Központ, Swat, Terror, Police">
-        <title>Terrorelhárítási Központ - E-Ügyintézés - karbantartás</title>
+        <title>Terrorelhárítási Központ - E-Ügyintézés - Tájékoztatók</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="TEK.css">
@@ -75,23 +75,33 @@
                         <li><a href="szabályzatok.html">Szabályzatok</a></li>
                         <li><a href="tájékoztatók.html">Tájékoztatók</a></li>
                         <li><a href="epapírlogo.html">E-Papír logo</a></li>
-                        <li><a href="rendoriintezkedesellenipanasz.html">Rendőri intézkedés elleni panasz (ÁNYK)</a></li>
+                        <li><a href="rendőriintezkedésellenipanasz.html">Rendőri intézkedés elleni panasz (ÁNYK)</a></li>
                     </ul><br>
                     <hr>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 main-text-info">
-                    <h3><b>Karbantartás</b></h3><br>
-                    <p>
-                        <b>
-                            Tájékoztatás a Terrorelhárítási Központ elektronikus ügyintézésében tervezett üzemszünetről<br>
-                            Leállás kezdete: 2019. 09. 26. - 16:00<br>
-                            Leállás vége: 2019. 06. 27. - 16:00<br>
-                            Érintett szolgáltatások: e-Papír űrlapok befogadása, ÁNYK űrlapok befogadása, e-Papír küldemények (KRX) befogadása, hivatali tárhelyre küldemények fogadása, küldése
-                        </b><br><br>
-                        A Terrorelhárítási Központ által működtetett elektronikus információs rendszert érintően 2019. 09. 26. (csütörtök) 16:00 óra és 2019. 09. 27. (péntek) 16:00 óra között karbantartást végeznek, amely idő alatt a Terrorelhárítási Központ elektronikus ügyintézése korlátozottan lesz elérhető. Az ügyfelek részére változatlanul elérhető lesz a Terrorelhárítási Központ hivatalos internetes honlapja, így a központi és a Terrorelhárítási Központ által biztosított ügyintézési szolgáltatások igénybevételével biztosított elektronikus ügyindítási lehetőségek. Az elektronikus küldemények Terrorelhárítási Központ oldali feldolgozása az érintett időszakot követően kezdődik meg.
-                    </p>
+                    <h3><b>Ügyfél tájékoztatók</b></h3><br>
+                    <ul>
+                        <li><a href="http://tek.gov.hu/pdf/Perelharito_karigeny_benyujtasahoz.pdf" target="_self">- Perelhárító kárigény benyújtásához</a></li>
+                        <li><a href="http://tek.gov.hu/pdf/tajek_kartalanítasi_igeny.pdf" target="_self">- Kártalanítási igény benyújtásához</a></li>
+                        <li><a href="http://tek.gov.hu/pdf/tajek_kozerdeku_adatigenyles.pdf" target="_self">- Közérdekű adat, illetve közérdekből nyilvános adat megismerése iránti igény elektronikus úton történő benyújtásához</a></li>
+                        <li><a href="http://tek.gov.hu/pdf/tajek_minadat_megism.pdf" target="_self">- Nemzeti minősített adat megismerése iránti kérelem elektronikus úton történő benyújtásához</a></li>
+                        <li><a href="http://tek.gov.hu/pdf/tajek_panasz_kozerdeku_bejelentes.pdf" target="_self">- Panasz, közérdekű bejelentés elektronikus úton történő benyújtásához</a></li>
+                        <li><a href="http://tek.gov.hu/pdf/tajek_rendori_intezkedes_elleni_panasz.pdf" target="_self">- Rendőri intézkedés elleni panasz elektronikus úton történő benyújtásához</a></li>
+                        <li><a href="http://tek.gov.hu/pdf/tajek_szemelyes_adat_kezeleserol.pdf" target="_self">- Személyes adatok kezelésével kapcsolatos kérelmek elektronikus úton történő benyújtásához</a></li>
+                    </ul><br><br>
+                    <h3><b>Customer information</b></h3><br>
+                    <ul>
+                        <li><a href="http://tek.gov.hu/pdf/electronicrequestforaccesstodata.pdf">- Submitting an electronic request for access to data of public interest or data public on grounds of public interest</a></li>
+                        <li><a href="http://tek.gov.hu/pdf/Submittinganelectronicrequestforaccesstonationalclassifieddata.pdf">- Submitting an electronic request for access to national classified data</a></li>
+                        <li><a href="http://tek.gov.hu/pdf/Submittingpersonaldatainformationrequestselectronically.pdf">- Submitting personal data information requests electronically</a></li>
+                        <li><a href="http://tek.gov.hu/pdf/Submittingacompensationclaim.pdf">- Submitting a compensation claim</a></li>
+                        <li><a href="http://tek.gov.hu/pdf/Submittingcomplaints.pdf">- Submitting complaints, public interest disclosures electronically to the police</a></li>
+                        <li><a href="http://tek.gov.hu/pdf/Submittingaproceedingavoidanceclaimelectronically.pdf">- Submitting a proceeding avoidance claim electronically</a></li>
+                        <li><a href="http://tek.gov.hu/pdf/Submittinganelectroniccomplaintagainstpolicemeasures.pdf">- Submitting an electronic complaint against police measures</a></li>
+                    </ul><br>
                     <hr>
                 </div>
             </div>
